ft/src/tui/snapshots/ft__tui__tests__edit_popup_80x24.snap
---
source: ft/src/tui/tests.rs
assertion_line: 754
expression: frame
---
  1 Welcome  │  2 Tasks  │  3 Notes  │  4 Timeblocks                            
┌ sidebar ─────────────┐┌ query ───────────────────────────────────────────────┐
│                      ││not done and due before 2026-05-18 sort by due, priori│
│ Sun 10 May           │└──────────────────────────────────────────────────────┘
│ 14:32:05             │┌ tasks ───────────────────────────────────────────────┐
│                      ││ ── ove┌ edit task ───────────────────────────┐       │
│ ── views ──          ││▶   !! │                                      │       │
│ ▶ Search             ││    !  │  description : Pay rent│             │       │
│                      ││ ── upc│          due : 2026-05-08            │       │
│                      ││       │    scheduled :                       │       │
│                      ││    !! │     priority : high                  │6-05-11│
│                      ││    v  │         tags :                       │       │
│                      ││       │   recurrence :                       │       │
│                      ││       │                                      │       │
│                      ││       │  Tab/Shift+Tab next · Ctrl+S save · E│       │
│                      ││       │                                      │       │
│                      ││       │                                      │       │
│                      ││       │                                      │       │
│                      ││       └──────────────────────────────────────┘       │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
└──────────────────────┘└──────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Tasks          refreshed [HH:MM:SS]      mode: normal
