ft/src/tui/snapshots/ft__tui__tests__git_leader_80x24.snap
---
source: ft/src/tui/tests.rs
assertion_line: 4844
expression: frame
---
  1 Welcome  │  2 Tasks  │  3 Notes  │  4 Timeblocks                            
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
         ██╗    ██╗███████╗██╗      ██████╗ ██████╗ ███╗   ███╗███████╗         
         ██║    ██║██┌ git · pick an action ──────────────┐███║██╔════╝         
         ██║ █╗ ██║██│                                    │╔██║█████╗           
         ██║███╗██║██│  s     sync (commit + pull + push) │╝██║██╔══╝           
         ╚███╔███╔╝██│  Esc   cancel                      │ ██║███████╗         
          ╚══╝╚══╝ ╚═│                                    │ ╚═╝╚══════╝         
                     │                                    │                     
                  to │                                    │ian                  
                     └────────────────────────────────────┘                     
               press any key to continue · q to quit · ? for help               
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 vault: test-vault  ·  tab: Welcome         not yet refreshed         mode: git
