ft/src/tui/snapshots/ft__tui__tests__graph_create_filename_prompt_80x24.snap
---
source: ft/src/tui/tests.rs
expression: frame
---
  1 Graph  │  2 Tasks  │  3 Notes  │  4 Timeblocks                              
 1: node where kind = D…                                                        
▶   D /                                                                         
press / to edit query                                                           
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                ┌ create · 2/2 filename · . ───────────────────┐                
                │▏ filename: █                                 │                
                │                                              │                
                │ Enter commit   Esc back   Ctrl+W delete word │                
                │                                              │                
                └──────────────────────────────────────────────┘                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
> node where kind = Directory and path = ""; expand where edge.kind = directory-
 vault: vault  ·  tab: Graph               refreshed [HH:MM:SS]      mode: normal
