ft/src/tui/snapshots/ft__tui__tests__graph_move_target_banner_80x24.snap
---
source: ft/src/tui/tests.rs
expression: frame
---
  1 Graph  │  2 Tasks  │  3 Notes  │  4 Timeblocks                              
Move 1 selection(s): navigate to target directory, Enter/m to confirm, t for pic
▼   D /                                                                         
  ▶   D Projects/                                                               
  ▶   D Areas/                                                                  
      N root                                                                    
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
> node where kind = Directory and path = ""; expand where edge.kind = directory-
 vault: vault  ·  tab: Graph               refreshed [HH:MM:SS]      mode: normal
