ft/src/tui/snapshots/ft__tui__tests__graph_multi_select_markers_80x24.snap
---
source: ft/src/tui/tests.rs
expression: frame
---
  1 Graph  │  2 Tasks  │  3 Notes  │  4 Timeblocks  │  5 Journal                
> node where path = ""; expand where edge.kind in {directory-contains, link, emb
 1: node where path = "…                                                        
┌ node where path = "… ────────────────────────────────────────────────────────┐
│▼   D /                                                                       │
│  ▶   D Areas/                                                                │
│  ▶   D Projects/                                                             │
│    ● N root                                                                  │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: vault  ·  tab: Graph               refreshed [HH:MM:SS]      mode: normal
