ft/src/tui/snapshots/ft__tui__tests__graph_periodic_leader_80x24.snap
---
source: ft/src/tui/tests.rs
expression: frame
---
  1 Graph  │  2 Tasks  │  3 Notes  │  4 Timeblocks  │  5 Journal                
> node where kind = Directory and path = ""; expand where edge.kind = directory-
 1: node where kind = D…                                                        
┌ node where kind = D… ────────────────────────────────────────────────────────┐
│    D /                                                                       │
│press / to edit query                                                         │
│                                                                              │
│                       ┌ periodic note · pick a period┐                       │
│                       │                              │                       │
│                       │  d     daily                 │                       │
│                       │  w     weekly                │                       │
│                       │  m     monthly               │                       │
│                       │  q     quarterly             │                       │
│                       │  y     yearly                │                       │
│                       │  Esc   cancel                │                       │
│                       │                              │                       │
│                       └──────────────────────────────┘                       │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Graph          refreshed [HH:MM:SS]   modal: periodic-
