ft/src/tui/snapshots/ft__tui__tests__graph_rename_note_modal_80x24.snap
---
source: ft/src/tui/tests.rs
expression: frame
---
  1 Graph  │  2 Tasks  │  3 Notes  │  4 Timeblocks  │  5 Journal                
> node where kind = Directory and path = ""; expand where edge.kind = directory-
 1: node where kind = D…                                                        
┌ node where kind = D… ────────────────────────────────────────────────────────┐
│▼   D /                                                                       │
│  ▶   D Areas/                                                                │
│  ▶   D Projects/                                                             │
│      N root                                                                  │
│                                                                              │
│               Rename note                                                    │
│               root                                                           │
│               Enter: commit · Esc: discard                                   │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: vault  ·  tab: Graph            Enter:commit  Esc:cancel  modal: rename
