ft/src/tui/snapshots/ft__tui__tests__graph_tab_input_mode_80x24.snap
---
source: ft/src/tui/tests.rs
expression: frame
---
  1 Graph  │  2 Tasks  │  3 Notes  │  4 Timeblocks  │  5 Journal                
 1: node where kind = D…                                                        
▶   D /                                                                         
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
> node where kind = Directory and path = ""; expand where edge.kind = directory-
 vault: vault  ·  tab: Graph               refreshed [HH:MM:SS]      mode: normal
