ft/src/tui/snapshots/ft__tui__tests__graph_tab_populated_default_query_80x24.snap
---
source: ft/src/tui/tests.rs
expression: frame
---
  1 Graph  │  2 Tasks  │  3 Notes  │  4 Timeblocks  │  5 Journal                
> node where kind = Directory and path = ""; expand where edge.kind = directory-
 1: node where kind = D…                                                        
┌ node where kind = D… ────────────────────────────────────────────────────────┐
│▶   D /                                                                       │
│press / to edit query                                                         │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: vault  ·  tab: Graph               refreshed [HH:MM:SS]      mode: normal
